<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grey_abstract_lines_transparent_background_png"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:text="@string/value_added_tax_calculation"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/cost_or_total_price"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/select_vat_percentage"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_vat_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"/>
        <RadioButton
            android:id="@+id/rb_vat_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"/>
        <RadioButton
            android:id="@+id/rb_vat_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"/>

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_round_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up_total"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate_vat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D136816"
        android:text="@string/calculate_vat"/>

    <TextView
        android:id="@+id/txt_cost_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        tools:text="@string/app_name"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="184dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/vv" />

</LinearLayout>